Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19164

Assertion `fixed' failed in Item_func_inet_aton::val_int

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4(EOL)
    • 10.4.5
    • Optimizer
    • None

    Description

      create table t1 (d1 date);
      insert into t1 values (null),('1971-03-06'),('1993-06-05'),('1998-07-08');
       
      select 1 from t1 group by d1 
      having d1 between (inet_aton('1978-04-27')) and '2018-08-26';
      

      10.4 5d8ca989974734e931cf247

      mysqld: /10.4/sql/item_inetfunc.cc:34: virtual longlong Item_func_inet_aton::val_int(): Assertion `fixed' failed.
       
      assert/assert.c:92(__assert_fail_base)[0x7f2c808e0bd7]
      /lib/x86_64-linux-gnu/libc.so.6(+0x2dc82)[0x7f2c808e0c82]
      /10.4/sql/mysqld(_ZN19Item_func_inet_aton7val_intEv+0x162)[0x55dd85599846]
      sql/item_inetfunc.cc:36(Item_func_inet_aton::val_int())[0x55dd8516f23c]
      sql/item.cc:1302(Item::get_date_from_int(THD*, st_mysql_time*, date_mode_t))[0x55dd8488d620]
      /10.4/sql/mysqld(+0xf2af89)[0x55dd84761f89]
      /10.4/sql/mysqld(_ZN4Item26val_datetime_packed_resultEP3THD+0x13d)[0x55dd8516563b]
      sql/item_func.h:1014(Item_int_func::get_date(THD*, st_mysql_time*, date_mode_t))[0x55dd851b28c0]
      /10.4/sql/mysqld(_ZN10Item_cache9has_valueEv+0xaa)[0x55dd84e93df8]
      sql/item.h:1731(Item::get_date_result(THD*, st_mysql_time*, date_mode_t))[0x55dd851c190e]
      sql/item.cc:121(Item::val_datetime_packed_result(THD*))[0x55dd851e0875]
      sql/item.cc:9781(Item_cache_temporal::cache_value())[0x55dd84e6de34]
      sql/item.h:6532(Item_cache::has_value())[0x55dd854d46c4]
      sql/item.h:6722(Item_cache_date::val_datetime_packed(THD*))[0x55dd84ae3506]
      sql/item_cmpfunc.cc:2156(Item_func_between::val_int_cmp_datetime())[0x55dd84ae2fce]
      sql/sql_type.cc:4947(Type_handler_temporal_with_date::Item_func_between_val_int(Item_func_between*) const)[0x55dd84ae0dfb]
      sql/item_cmpfunc.h:908(Item_func_between::val_int())[0x55dd84a7c9d4]
      sql/sql_select.cc:20124(evaluate_join_record(JOIN*, st_join_table*, int))[0x55dd84a7a34e]
      sql/sql_select.cc:20068(sub_select(JOIN*, st_join_table*, bool))[0x55dd84a7dd8c]
      sql/sql_select.cc:19567(do_select(JOIN*, Procedure*))[0x55dd84a54b82]
      sql/sql_select.cc:4381(JOIN::exec_inner())[0x55dd849d9f9f]
      sql/sql_select.cc:4164(JOIN::exec())[0x55dd849c71bc]
      sql/sql_select.cc:4597(mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x55dd849e2260]
      sql/sql_select.cc:424(handle_select(THD*, LEX*, select_result*, unsigned long))[0x55dd849baf10]
      sql/sql_parse.cc:6602(execute_sqlcom_select(THD*, TABLE_LIST*))[0x55dd849b7e4f]
      sql/sql_parse.cc:3891(mysql_execute_command(THD*))[0x55dd84d2afcb]
      sql/sql_parse.cc:8154(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x55dd84d2a995]
      sql/sql_parse.cc:1834(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x55dd860e211b]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7f2c817296ba]
      x86_64/clone.S:111(clone)[0x7f2c809ba41d]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x62b00007e288): select 1 from t1 group by d1  having d1 between (inet_aton('1978-04-27')) and '2018-08-26'
      
      

      Attachments

        Issue Links

          Activity

            People

              igor Igor Babaev (Inactive)
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.25d
                  1.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.